# cviko_6

./: circles_intersection.py  circles_intersection_draw.py  function_design.py  main.py  pyproject.toml  signal_ops.py  signal_plot_ops.py  use_signal_ops.py  use_signal_plot_ops.py
circles_project/: .gitignore  README.md  pyproject.toml
circles_project/src/circles_project/: circles_stats.py
circles_project/tests/: test_circles_stats.py
