[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "circles-project"
version = "0.1.0"
description = "Prienik kružníc – modulárny Python projekt s testami"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
